--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  tests:
+  test:
     runs-on: ubuntu-latest
     services:
       mysql:
@@ -44,12 +44,12 @@ jobs:
       - name: Run migrations
         run: php artisan migrate --force
 
-      - name: Run tests
-        run: php artisan test
+      - name: Run s
+        run: php artisan 
 
   build-and-deploy:
-    runs-on: ubuntu-latest
-    needs: test
+    runs-on: ubuntu-la
+    needs: 
 
     steps:
       - name: Checkout code
@@ -65,7 +65,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ojiset22/nusapod-laravel:latest
+          tags: ojiset22/nusapod-laravel:la
 
       - name: Trigger NusaPod Webhook (Server Pull)
         run: |
@@ -73,4 +73,4 @@ jobs:
           curl -X POST https://nusapod.com/containers/webhook \
             -H "Content-Type: application/json" \
             -H "X-Webhook-Token: ${{ secrets.WEBHOOK_TOKEN }}" \
-            -d '{"name":"laravel1","image":"ojiset22/nusapod-laravel:latest"}'
+            -d '{"name":"laravel1","image":"ojiset22/nusapod-laravel:la"}'
