--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,19 +7,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    services:
-      mysql:
-        image: mysql:8
-        env:
-          MYSQL_DATABASE: laravel
-          MYSQL_ROOT_PASSWORD: root
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping -h localhost"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
 
     steps:
       - name: Checkout repo
@@ -41,14 +28,11 @@ jobs:
       - name: Generate key
         run: php artisan key:generate
 
-      - name: Run migrations
-        run: php artisan migrate --force
-
-      - name: Run s
-        run: php artisan 
+      - name: Run tests
+        run: php artisan test
 
   build-and-deploy:
-    runs-on: ubuntu-la
+    runs-on: ubuntu-latest
     needs: test
 
     steps:
